<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ZAZ060</string>
    <string name="action_settings">Settings</string>
 	<string name="open_str">打开</string>
 	<string name="close_str">关闭</string>
 	<string name="getimage_str">获取图像 </string>
 	<string name="getchar_str">获取特征</string>
 	<string name="fpmatch_str">比对指纹</string>
 	<string name="eroll_str">注册指纹 </string>
 	<string name="search_str">搜索指纹</string>
 	<string name="upchar_str">上传特征</string>
 	<string name="equit_str">清空指纹</string>
 	<string name="down_str">下载特征</string>
 	<string name="opensuccess_str">打开设备成功</string>
	<string name="openfail_str">打开设备失败</string>
	<string name="usbfail_str">Usb未准备完成</string>
	<string name="readfptimeout_str">读指纹等待超时</string>
	<string name="stopsearch_str">搜索主动停止</string>
	<string name="Communicationerr_str">通讯异常</string>
	<string name="readingfp_str">正在读取指纹中   剩余时间:</string>
	<string name="stopgetimage_str">获取图像主动停止</string>
	<string name="getimageing_str">图像获取中</string>
	<string name="getimagesuccess_str">获取图像成功</string>
	<string name="getcharsuccess_str">获取特征成功</string>
	<string name="upimagesuccess_str">上传图像成功</string>
	<string name="downsuccess_str">特征下载成功</string>
	<string name="downcharsuccess_str">下载特征成功</string>
	<string name="upcharsuccess_str">上传特征成功</string>
	<string name="stopgetchar_str">获取特征主动停止</string>
	<string name="getfailchar_str">特征太差，请重新录入</string>
	<string name="putyourfinger_str">请按指纹需要比对的指纹</string>
	<string name="matchsuccess_str">比对成功   得分:</string>
	<string name="matchfail_str">比对失败   得分:</string>
	<string name="pickupfinger_str">请拿起手指</string>
	<string name="searchsuccess_str">搜索指纹成功</string>
	<string name="searchfail_str">搜索指纹失败</string>
	<string name="getfpsuccess_str">获取指纹成功</string>
	<string name="erollsuccess_str">注册指纹成功   存储ID:</string>
	<string name="erollfail_str">注册指纹失败</string>
	<string name="stoperoll_str">注册主动停止</string>
	<string name="RegModulefail_str">合成模板失败</string>
	<string name="stopmatch_str">比对主动停止</string>
	<string name="equitsuccess_str">清空指纹成功</string>
	

<!--  	
	<string name="app_name">ZAZ060</string>
    <string name="action_settings">Settings</string>
 	<string name="open_str">open</string>
 	<string name="close_str">close</string>
 	<string name="getimage_str">Getimage </string>
 	<string name="getchar_str">Getfeatures</string>
 	<string name="fpmatch_str">Compare</string>
 	<string name="eroll_str">Register</string>
 	<string name="search_str">Search</string>
 	<string name="upchar_str">Upfeature</string>
 	<string name="equit_str">Empty</string>
 	<string name="down_str">downfeature</string>
 	<string name="opensuccess_str">open the device successfully</string>
	<string name="openfail_str">Failed to open the device</string>
	<string name="readfptimeout_str">Read Fingerprint Timeout</string>
	<string name="stopsearch_str">stop Search </string>
	<string name="Communicationerr_str">Communication error</string>
	<string name="readingfp_str">Reading in the fingerprint   Time left:</string>
	<string name="stopgetimage_str">Stop acquiring the image</string>
	<string name="getimageing_str">Image acquisition</string>
	<string name="getimagesuccess_str">Getting the image successful</string>
	<string name="downsuccess_str">Feature download successful</string>
	<string name="downcharsuccess_str">Feature download successful  time consuming:</string>
	<string name="upcharsuccess_str">Upload feature successful  time consuming:</string>
	<string name="stopgetchar_str">Get feature active stop</string>
	<string name="getfailchar_str">Feature is too bad, please re-enter...</string>
	<string name="putyourfinger_str">Press the fingerprint to compare the fingerprint</string>
	<string name="matchsuccess_str">Match success   Score:</string>
	<string name="matchfail_str">Match failed   Score:</string>
	<string name="pickupfinger_str">Please pick up your finger</string>
	<string name="searchsuccess_str">Search for fingerprint success   ID:</string>
	<string name="searchfail_str">Failed to search for fingerprint</string>
	<string name="getfpsuccess_str">Fingerprint successful</string>
	<string name="erollsuccess_str">Registration fingerprint success   Storage ID:</string>
	<string name="erollfail_str">Failed to register fingerprint</string>
	<string name="stoperoll_str">Registration is automatically stopped</string>
	<string name="RegModulefail_str">Synthetic template failed</string>
	<string name="stopmatch_str">Compare to active stop</string>
	<string name="equitsuccess_str">Empty fingerprint successfully</string>
-->	
</resources>
