<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/layout_full"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true"/>


    <LinearLayout
        style="@style/layout_vertical"
        android:layout_weight="100"
        android:orientation="vertical">

        <LinearLayout
            style="@style/layout_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.05"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:src="@drawable/fingerprint"/>

        </LinearLayout>

        <LinearLayout
            style="@style/layout_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=""
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            style="@style/layout_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.08"
            android:orientation="horizontal">

            <LinearLayout
                style="@style/layout_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnopen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.14"
                    android:text="@string/open_str"/>

                <Spinner
                    android:id="@+id/Spinner_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"/>

                <Spinner
                    android:id="@+id/Spinner_char"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"/>

            </LinearLayout>

            <LinearLayout
                style="@style/layout_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btngetimg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:text="@string/getimage_str"/>

                <Button
                    android:id="@+id/btngetchar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:text="@string/getchar_str"/>

                <Button
                    android:id="@+id/btnequit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:text="@string/equit_str"/>

                <Button
                    android:id="@+id/btnupchar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:text="@string/upchar_str"/>

            </LinearLayout>

            <LinearLayout
                style="@style/layout_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:text="@string/fpmatch_str"/>

                <Button
                    android:id="@+id/btneroll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:text="@string/eroll_str"/>

                <Button
                    android:id="@+id/btnsearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:text="@string/search_str"/>

                <Button
                    android:id="@+id/btndown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:text="@string/down_str"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
